Bug 424993 - KTimeTracker, opening Edit history dialog crash
Summary: KTimeTracker, opening Edit history dialog crash
Status: RESOLVED FIXED
Alias: None
Product: ktimetracker
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.1
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Alexander Potashev
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2020-08-04 07:30 UTC by Benoit S.
Modified: 2021-09-26 18:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Benoit S. 2020-08-04 07:30:28 UTC
Application: ktimetracker (5.0.1)

Qt Version: 5.15.0
Frameworks Version: 5.72.0
Operating System: Linux 5.7.11-arch1-1 x86_64
Windowing system: X11
Distribution: Arch Linux

-- Information about the crash:
- What I was doing when the application crashed:

opening Edit history.
Seems related to a specif entry in my ics file.

The crash can be reproduced every time.

-- Backtrace:
Application: KTimeTracker (ktimetracker), signal: Aborted

[KCrash Handler]
#4  0x00007fbfb1506355 in raise () from /usr/lib/libc.so.6
#5  0x00007fbfb14ef853 in abort () from /usr/lib/libc.so.6
#6  0x00007fbfb1a449ac in QMessageLogger::fatal(char const*, ...) const () from /usr/lib/libQt5Core.so.5
#7  0x0000555ac704a12f in HistoryDialog::listAllEvents (this=0x7fbfa8008390) at /usr/include/qt/QtCore/qlogging.h:90
#8  0x0000555ac706fc99 in HistoryDialog::HistoryDialog (this=0x7fbfa8008390, parent=<optimized out>, projectModel=<optimized out>) at /usr/src/debug/ktimetracker-5.0.1/src/dialogs/historydialog.cpp:104
#9  0x0000555ac70519fd in TimeTrackerWidget::editHistory (this=0x555ac7e9cb80) at /usr/src/debug/ktimetracker-5.0.1/src/timetrackerwidget.cpp:126
#10 0x00007fbfb1c9da26 in ?? () from /usr/lib/libQt5Core.so.5
#11 0x00007fbfb2812f23 in QAction::triggered(bool) () from /usr/lib/libQt5Widgets.so.5
#12 0x00007fbfb2815805 in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQt5Widgets.so.5
#13 0x00007fbfb2996f1b in ?? () from /usr/lib/libQt5Widgets.so.5
#14 0x00007fbfb299e552 in ?? () from /usr/lib/libQt5Widgets.so.5
#15 0x00007fbfb285ac7e in QWidget::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#16 0x00007fbfb2819702 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#17 0x00007fbfb2820977 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#18 0x00007fbfb1c667ba in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#19 0x00007fbfb281f85e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /usr/lib/libQt5Widgets.so.5
#20 0x00007fbfb287392f in ?? () from /usr/lib/libQt5Widgets.so.5
#21 0x00007fbfb287678f in ?? () from /usr/lib/libQt5Widgets.so.5
#22 0x00007fbfb2819702 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#23 0x00007fbfb1c667ba in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#24 0x00007fbfb212637c in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib/libQt5Gui.so.5
#25 0x00007fbfb20fbb4c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Gui.so.5
#26 0x00007fbfad793c8c in ?? () from /usr/lib/libQt5XcbQpa.so.5
#27 0x00007fbfb031543c in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#28 0x00007fbfb03631d9 in ?? () from /usr/lib/libglib-2.0.so.0
#29 0x00007fbfb0314221 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#30 0x00007fbfb1cbf331 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#31 0x00007fbfb1c6513c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#32 0x00007fbfb1c6d5c4 in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#33 0x0000555ac704ac61 in main (argc=<optimized out>, argv=0x7ffcd34dcf48) at /usr/src/debug/ktimetracker-5.0.1/src/main.cpp:169
[Inferior 1 (process 807647) detached]

Possible duplicates by query: bug 424911, bug 423951, bug 423132, bug 417285, bug 414922.

Reported using DrKonqi
Comment 1 Alexander Potashev 2020-08-23 20:39:09 UTC
May be coming from this sanity check: "qFatal("orphan event");" from https://invent.kde.org/pim/ktimetracker/-/blob/master/src/dialogs/historydialog.cpp

You can run ktimetracker from command line to confirm if you want, this should print "orphan event".

The code should be changed to ignore such errors.
Comment 2 Benoit S. 2020-08-30 07:22:22 UTC
On Monday, August 24, 2020 5:39:09 AM JST Alexander Potashev wrote:
> https://bugs.kde.org/show_bug.cgi?id=424993
> 
> --- Comment #1 from Alexander Potashev <aspotashev@gmail.com> ---
> May be coming from this sanity check: "qFatal("orphan event");" from
> https://invent.kde.org/pim/ktimetracker/-/blob/master/src/dialogs/historydia
> log.cpp
> 
> You can run ktimetracker from command line to confirm if you want, this
> should print "orphan event".
> 
> The code should be changed to ignore such errors.

Indeed I see "orphan event" in the console.
Comment 3 Bug Janitor Service 2021-04-27 15:32:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/ktimetracker/-/merge_requests/1