Fix edit history dialog crash when event has non existent related entity

Replaced qFatal() by qCWarning(). Faulty event does not appear on the list then.

BUG: 424993